# py-spidev

./: pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
